results/treeNewEp2.err

EPSILON | NUMPOINTS | RP | Construct T | Kernel T | Total T



 _______________ 256 _____ 512 ______1 ______________________



MSD ________________________________________________________________


0.007600 515345 6 1.460910 6437 3.837087 5.426385 
0.009130 515345 6 1.203492 3456 6.324055 7.654726 
0.011334 515345 6 1.495370 1944 12.242679 13.865435 

Wave __________________________________________________


0.005400 287999 6 0.849313 1614 0.695798 1.621944 
0.007020 287999 6 0.875179 577 1.382176 2.333315 
0.008358 287999 6 0.866231 308 3.115375 4.057457 src/launcher.cu:3244:17: error: operator '==' has no left operand
         #if TPP == 1
                 ^~
make: *** [Makefile:32: build/launcher.o] Error 1


BIGCROSS____________________________________________________________

/var/spool/slurm/slurmd/job5524927/slurm_script: line 105: ./build/main: No such file or directory
/var/spool/slurm/slurmd/job5524927/slurm_script: line 105: ./build/main: No such file or directory
/var/spool/slurm/slurmd/job5524927/slurm_script: line 105: ./build/main: No such file or directory


SUSY ________________________________________________________________


0.017030 5000000 6 5.526866 45078 39.006759 46.079193 
0.020780 5000000 6 5.615752 23323 76.560795 83.701569 
0.025555 5000000 6 5.260063 13882 144.225058 151.025107 

HIGGS ________________________________________________________________


0.049186 11000000 6 11.710879 1075 1698.957549 1715.812448 
0.055580 11000000 6 11.693453 827 1910.563303 1927.390173 
0.063117 11000000 6 11.909941 638 2268.859564 2285.793941 

 _______________ 256 _____ 1024 ______1 ______________________



MSD ________________________________________________________________


0.007600 515345 6 1.088446 6437 3.624668 4.847328 
0.009130 515345 6 1.475691 3456 5.902993 7.508901 
0.011334 515345 6 1.425772 1944 11.974133 13.520280 

Wave __________________________________________________


0.005400 287999 6 0.847779 1614 0.627583 1.552498 
0.007020 287999 6 0.830692 577 1.382438 2.282783 
0.008358 287999 6 0.614748 308 3.244144 3.928060 src/launcher.cu:3244:17: error: operator '==' has no left operand
         #if TPP == 1
                 ^~
make: *** [Makefile:32: build/launcher.o] Error 1


BIGCROSS____________________________________________________________

/var/spool/slurm/slurmd/job5524927/slurm_script: line 105: ./build/main: No such file or directory
/var/spool/slurm/slurmd/job5524927/slurm_script: line 105: ./build/main: No such file or directory
/var/spool/slurm/slurmd/job5524927/slurm_script: line 105: ./build/main: No such file or directory


SUSY ________________________________________________________________


0.017030 5000000 6 5.544205 45078 31.559177 38.247531 
0.020780 5000000 6 5.564626 23323 64.316825 71.016754 
0.025555 5000000 6 5.504957 13882 121.875725 128.524253 

HIGGS ________________________________________________________________


0.049186 11000000 6 11.612958 1075 1465.073360 1480.190034 
0.055580 11000000 6 11.799592 827 1658.776830 1674.073339 
0.063117 11000000 6 12.109112 638 1916.726581 1932.403403 